@@ -1,3 +1,7 @@
+2010-05-25  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #14333: htmlArea RTE: justify after CTRL+A not working in Firefox
+
 2010-05-24  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Updated htmlArea RTE version to 1.9.3
